libreoffice (1:7.3.0~rc2-3) UNRELEASED; urgency=medium

  * debian/tests/control.in:
    - comment out build-needing autopkgtests again by request of the release
      team; the infrastructure even on amd64 is not capable of handling it due
      due autopkgtest shortcomings
  * debian/control.help.in.
    - move the browser Depends to Recommends: (closes: #1003864)

 -- Rene Engelhard <rene@debian.org>  Fri, 21 Jan 2022 20:10:07 +0100

libreoffice (1:7.3.0~rc2-2) unstable; urgency=medium

  * upload to unstable

  * debian/tests/control.in, debian/tests/uicheck-{sfx2,svx}:
    also run uitests in sfx2 and svx
  * debian/tests/control.in: try to optimize the order of the tests
    a bit (especially for uicheck-*) to try reusing the testbed and
    avoid costly copy(up|down)s

 -- Rene Engelhard <rene@debian.org>  Sun, 16 Jan 2022 11:30:18 +0100

libreoffice (1:7.3.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 12 Jan 2022 20:17:15 +0100

libreoffice (1:7.3.0~rc1-2) experimental; urgency=medium

  * debian/patches/fix-uicheck-tests-on-i386.patch: update
  * debian/patches/fix-Tdf126116-test.diff: add upstream patch from gerrit;
    fix upstream FTBFS timebomb found by reproducible builds

  * debian/tests/*: rename "uno" to "testtools-bridgetest", since it's
    more telling (and inside testtols anyway, uno is just the command
    ran)

 -- Rene Engelhard <rene@debian.org>  Thu, 23 Dec 2021 17:23:03 +0100

libreoffice (1:7.3.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/rules:
    - add support (don't use it (yet)) for using --enable-cipher-openssl-backend
    - limit llvm build-dep to le/skia-using archs
    - build the mysqlc test only on the archs we run the actual test (at least
      for now)
    - bump liborcus-dev build-depends to >= 0.17.2 if we run the tests

 -- Rene Engelhard <rene@debian.org>  Sun, 28 Nov 2021 16:46:17 +0100
