@@ -1,13 +1,13 @@
 diff --git a/sysui/desktop/apparmor/program.soffice.bin b/sysui/desktop/apparmor/program.soffice.bin
-index 42053db2abef..83bd9d11f93c 100644
+index 42053db2abef..2a60f67c2846 100644
 --- a/sysui/desktop/apparmor/program.soffice.bin
 +++ b/sysui/desktop/apparmor/program.soffice.bin
-@@ -101,7 +101,7 @@ profile libreoffice-soffice INSTDIR-program/soffice.bin {
+@@ -101,7 +108,7 @@ profile libreoffice-soffice INSTDIR-program/soffice.bin {
    owner @{libo_user_dirs}/**/           rw,  #allow creating directories that we own
    owner @{libo_user_dirs}/**~lock.*     rw,  #lock file support
    owner @{libo_user_dirs}/**.@{libreoffice_ext} rwk,  #Open files rw with the right exts
 -  owner @{libo_user_dirs}/{,**/}lu??????????{,?}.tmp rwk, #Temporary file used when saving
-+  owner @{libo_user_dirs}/{,**/}lu???????????{,?}.tmp rwk, #Temporary file used when saving
++  owner @{libo_user_dirs}/{,**/}lu????????{,?,??,???,????}.tmp rwk, #Temporary file used when saving
    owner @{libo_user_dirs}/{,**/}.directory r, #Read directory settings on KDE
  
    # Settings
