@@ -6,6 +6,8 @@ libreoffice (1:7.3.0~rc2-3) UNRELEASED; urgency=medium
       due autopkgtest shortcomings
   * debian/control.help.in.
     - move the browser Depends to Recommends: (closes: #1003864)
+  * debian/patches/apparmor-updates.diff: add patch to fix saving with
+    enforced apparmor again, thanks Vincas Dargis (closes: #1004038) 
 
  -- Rene Engelhard <rene@debian.org>  Fri, 21 Jan 2022 20:10:07 +0100
 
